--- a/website/index.html
+++ b/website/index.html
@@ -84,7 +84,7 @@
                 </p>
                 <div class="review-person">
                     <img src="./res/images/marky.jfif" alt="">
-                    <p>-<span>Marky</span> CEO -Zuckerburger Foundation</p>
+                    <p>-<span>Marky</span> CEO -Zuckerburger</p>
                 </div>
             </div>
             <div class="card">
