new concepts introduced

--- a/jsReportCard2/index.html
+++ b/jsReportCard2/index.html
@@ -17,6 +17,7 @@
     </div>
     <div>
         <label for="marksCpp">Marks in C++ </label>
+        <!-- You could also have done      onblur="doCheck(this,marksCppSpan);"   -->
         <input type="text" id="marksCpp" min="0" max="100" onblur="doCheck(this.id);"><span id="marksCppSpan">*</span>
     </div>
     <div>
