buttons disable/enable added

--- a/jsReportCard2/index.html
+++ b/jsReportCard2/index.html
@@ -33,8 +33,8 @@
    
     <div >
         <input type="button" value="Total Marks" onclick="doCalc('sum');">
-        <input type="button" value="Grade" onclick="doCalc('grade');">
-        <input type="button" value="Percentage" onclick="doCalc('perc');">
+        <input type="button" id="btnGrade" value="Grade" onclick="doCalc('grade');" disabled>
+        <input type="button" id="btnPerc" value="Percentage" onclick="doCalc('perc');" disabled>
         <input type="reset" value="Reset"><span>Reset button not working cause of form keyword missing</span>
         <input type="button" value="Clear" onclick="doClear();">
     </div>
