pass button fixed

--- a/jsReportCard2/index.html
+++ b/jsReportCard2/index.html
@@ -48,7 +48,7 @@
         <label for="perc">Percentage:</label>
         <input type="text" id="perc" disabled>
     </div>
-    <input type="button" value="Check Pass" onclick="doCalc('pass');">
+    <input type="button" id="btnPass" value="Check Pass" onclick="doCalc('pass');" disabled>
     <script src="js/main.js"></script>
 </body>
 
