--- a/js-Claculator/index.html
+++ b/js-Claculator/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" async></script>
+    <script src="js/main.js"defer ></script>
 </head>
 <body>
     <h1>Calculator</h1>
 
     <div class="grid">
         <div id="screen">Screen</div>
-        <button id="back">Back</button>
-        <button id="1">1</button>
-        <button id="2">2</button>
-        <button id="3">3</button>
+        <button  id="back">Back</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
         <button id="CE">CE</button>
-        <button id="4">4</button>
-        <button id="5">5</button>
-        <button id="6">6</button>
-        <button id="plus">+</button>
-        <button id="7">7</button>
-        <button id="8">8</button>
-        <button id="9">9</button>
-        <button id="minus">-</button>
-        <button id="0">0</button>
-        <button id="00">00</button>
-        <button id="decimal">.</button>
-        <button id="multi">*</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>+</button>
+        <button>7</button>
+        <button>8</button>
+        <button >9</button>
+        <button>-</button>
+        <button>0</button>
+        <button>00</button>
+        <button>.</button>
+        <button>*</button>
         <button id="equal">=</button>
-        <button id="perc">%</button>
-        <button id="divide">/</button>
+        <button disabled>%</button>
+        <button >/</button>
     </div>
 </body>
 </html>
