scoreboard and result bar fixed

--- a/js-jQuery-TicTacToe/index.html
+++ b/js-jQuery-TicTacToe/index.html
@@ -13,6 +13,14 @@
 
 <body>
     <h1>TicTacToe</h1>
+    <div class='reset-bar'>
+        <div id="clear">Clear</div>
+        <div id="reset">Reset</div>
+        <span>1P:</span>
+        <div id="1P">0</div>
+        <span>2P:</span>
+        <div id="2P">0</div>
+    </div>
     <div id="container">
         <div class="box" id="1"></div>
         <div class="box" id="2"></div>
@@ -34,8 +42,8 @@
             <button id="circle">circle</button>
         </div>
     </div>
-    <div class="result-bar">
-            
+    <div id="result-bar">
+        
     </div>
     <script src="js/jQuery3.5.1-production-compressed.js"></script>
     <script src="js/main.js"></script>
