--- a/js-jQuery-TicTacToe/index.html
+++ b/js-jQuery-TicTacToe/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
-
 </head>
 
 <body>
     <h1>TicTacToe</h1>
+    <a href="instruction.html" target="_blank">Instructions</a>
     <div class='reset-bar'>
         <div id="clear">Clear</div>
         <div id="reset">Reset</div>
@@ -42,9 +40,7 @@
             <button id="circle">circle</button>
         </div>
     </div>
-    <div id="result-bar">
-        
-    </div>
+    <div id="result-bar"></div>
     <script src="js/jQuery3.5.1-production-compressed.js"></script>
     <script src="js/main.js"></script>
 </body>
