adding demonstration for usage of bootstrap grid

--- a/BootStrap/index.html
+++ b/BootStrap/index.html
@@ -50,6 +50,51 @@
             </form>
         </div>
     </nav>
+     <!--bootstrap grid snippet-->
+      <div class="container mt-3">
+        <div class="row ">
+         <!-- for lg and onwards 4 units for each image outof 12 for small 6 units per image out of 12-->
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp1813217.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2562825.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp1813217.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2570964.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2046360.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp1813217.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2596943.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2596943.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2596944.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2570990.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2596944.jpg" width="350px">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img src="https://wallpapercave.com/wp/wp2596949.jpg" width="350px">
+            </div>
+        </div>
+        <hr>
+   </div>
+
+    
     <br>
     <br>
     <br>
